Página terminada - REACT

--- a/index.html
+++ b/index.html
@@ -1,18 +1,94 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-compatible" content="IE=edge"
+  <meta http-equiv="X-UA-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="shortcut icon" href="/favicon-wh.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon-wh.ico" type="image/x-icon">
   <title>React</title>
 </head>
+
 <body>
-
-
-
-
+  <header>
+    <div class="top">
+      <div class="info-top">
+        <a><strong>Stream React Conf on May 15-16.</strong></a>
+      </div>
+      <div class="info-link">
+        <a href="https://conf.react.dev"><strong>Learn more.</strong></a>
+      </div>
+    </div>  
+    <nav>
+      <section class="image">
+        <a href="https://react.dev/">
+          <image src="image/img_izq.png" alt="logoreact"></image>
+        </a>
+      </section>
+      <section class="main-input">
+        <div class="main-in">
+          <span class="search-icon">
+            <i class="bi bi-search"></i>
+          </span>
+          <div class="version">
+            <a href="https://react.dev/versions">
+              v18.3.1
+            </a>
+          </div>
+          <input type="search" class="input" placeholder="Search">
+        </div>
+      </section>
+      <div class="barra1-top">
+          <li>
+            <a href="https://react.dev/learn">
+            <button><strong>Learn</strong></button></a>
+          </li>
+          <li>
+            <a href="https://react.dev/reference/react">
+            <button><strong>Reference</strong></button></a>
+          </li>
+          <li>
+            <a href="https://react.dev/community">
+            <button><strong>Community</strong></button></a>
+          </li>
+          <li>
+            <a href="https://react.dev/blog">
+            <button><strong>Blog</sgtrong></button></a>
+          </li>
+          <li>
+            <a href="https://github.com/facebook/react/releases" target="_blank" rel="noopener noreferrer">
+              <img src="github.ico"></img>
+            </a>
+          </li>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="main-logo"><img src="image/Captura de pantalla 2024-04-25 160428.png" alt="logoreact"></section>
+    <div class="mid-info">
+      <div class="mid-title">
+        <p><strong>React</strong></p>
+      </div>
+      <div class="mid-text">
+        <p>The library for web and native user interfaces</p>
+      </div>
+    </div>
+    <section class="main-buttons">
+      <div class="learn">
+        <a href="https://react.dev/learn">
+          <button><strong>Learn React</strong></button>
+        </a>
+      </div>
+      <div class="api">
+        <a href="https://react.dev/reference/react">
+          <button><strong>API Reference</strong></button>
+        </a>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
